# rag-system-evaluation-framework

./: .env.example  .gitignore  Dockerfile  README.md  config.py  dashboard.py  deploy.ps1  deploy.sh  download_corpus.py  entrypoint.py  evaluator.py  feedback_db.json  generate_eval_dataset.py  main.py  monitoring_db.json  pyproject.toml  rag_pipeline.py  render.yaml  requirements.txt  retriever.py  run_evaluation.py  test_gemini.py
.github/workflows/: deploy.yml  tests.yml  uptime_ping.yml
backend/: __init__.py  config.py  feedback_db.py  main.py  monitoring.py  rag_pipeline.py  weaviate_client.py
data/: eval_dataset.json  evaluation_report.json
data/corpus/: FIN_AAPL_2021_10-K_S00217.txt  FIN_AAPL_2021_10-K_S00290.txt  FIN_AAPL_2021_10-K_S00363.txt  FIN_AAPL_2021_10-K_S00414.txt  FIN_AAPL_2021_10-K_S00515.txt  FIN_AAPL_2021_10-K_S00708.txt  FIN_AAPL_2021_10-K_S00834.txt  FIN_AAPL_2021_10-K_S00858.txt  FIN_AAPL_2021_10-K_S00859.txt  FIN_AAPL_2021_10-K_S01052.txt  FIN_AAPL_2021_10-K_S01244.txt  FIN_AAPL_2021_10-K_S01354.txt  FIN_AAPL_2021_10-K_S01421.txt  FIN_AAPL_2021_10-K_S01435.txt  FIN_AAPL_2021_10-K_S01659.txt  FIN_AAPL_2021_10-K_S01816.txt  FIN_AAPL_2021_10-K_S02014.txt  FIN_AAPL_2021_10-K_S02192.txt  (+9982 more)
data_pipeline/: __init__.py  chunking.py  embedding.py  ingest.py
deploy/: main.tf  outputs.tf  variables.tf
evaluation/: __init__.py  evaluation_dataset.csv  evaluator.py  generate_dataset.py  run_evaluation.py
frontend/: __init__.py  dashboard.py
notebooks/: failure_analysis.ipynb
tests/: __init__.py  test_integration.py  test_unit.py
