[project]
name = "rag-system-with-a-real-evaluation-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "google-genai>=2.9.0",
    "httpx>=0.28.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
    "weaviate-client>=4.22.0",
]
